--- a/assets/StyleSheets/main.css
+++ b/assets/StyleSheets/main.css
@@ -20,18 +20,21 @@ a {
 .right {
     float: right;
 }
-*{
+
+* {
     box-sizing: border-box;
     border: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
-.center{
+
+.center {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.background{
+
+.background {
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.3),
         rgba(0, 0, 0, 0.3)),
@@ -44,28 +47,32 @@ a {
     background-size: 100% 100%;
     background-position: center;
 }
-.grid1{
+
+.grid1 {
     position: absolute;
     top: 20%;
     right: 10%;
     height: 60%;
     width: 80%;
 }
-.grid11{
+
+.grid11 {
     position: absolute;
     top: 30%;
     left: 10%;
     height: 40%;
     width: 40%;
 }
-.heading{
+
+.heading {
     font-size: 32px;
     font-weight: 900;
     color: white;
     letter-spacing: 1px;
 }
-.grid12{
-    background: rgba(255, 255, 255,.75);
+
+.grid12 {
+    background: rgba(255, 255, 255, .75);
     opacity: .7;
     position: absolute;
     top: 16%;
@@ -74,15 +81,17 @@ a {
     height: 72%;
     border-radius: 5px;
 }
-.form{
-    top:28%;
+
+.form {
+    top: 28%;
     right: 14.5%;
     position: absolute;
     height: 90%;
     width: 24%;
 }
-.form input{
-    opacity: 1 ;
+
+.form input {
+    opacity: 1;
     padding: 8px 20px;
     font-size: 16px;
     width: 100%;
@@ -92,12 +101,187 @@ a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
 }
+
 input[type="text"],
-input[type="email"]{
-    background:rgba(255, 255, 255,1);
-    color:#FAFAFA;
+input[type="email"] {
+    background: rgba(255, 255, 255, 1);
+    color: #263238;
 }
-input[type="submit"]{
+
+input[type="submit"] {
     color: white !important;
     background: #263238 !important;
+}
+
+/**-----------------------For Screen 992px-----------------------**/
+
+@media only screen and (max-width: 992px) {
+    .background {
+        height: 720px;
+    }
+
+    .heading {
+        font-size: 30px;
+    }
+
+    .grid1{
+        right: 7%;
+        width: 86%;
+    }
+
+    .grid11{
+        left: 8%;
+    }
+
+    .grid12 {
+        height: 68%;
+        right: 8%;
+    }
+    .form{
+        right: 12%;
+    }
+
+    .form input {
+        font-size: 15px;
+    }
+}
+
+@media only screen and (max-width: 880px) {
+    .background {
+        height: 670px;
+    }
+
+    .grid1 {
+        right: 4%;
+        width: 92%;
+    }
+
+    .heading {
+        font-size: 28px;
+    }
+
+    .grid11 {
+        left: 6%;
+
+    }
+
+    .grid12 {
+        right: 6%;
+    }
+
+    .form {
+        top: 25%;
+        right: 10%;
+        height: 64%;
+    }
+
+    .form input {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .grid1{
+        top: 3%;
+        height: 94%;
+        right: 3%;
+        width: 94%;
+    }
+    .grid11{
+        top: 5%;
+        height: 20%;
+        width: 90%;
+        text-align: center;
+    }
+    .heading{
+        font-size: 33px;
+    }
+    .grid12{
+        top: 35%;
+        height: 60%;
+        right: 25%;
+        width: 50%;
+    }
+    .form{
+        top: 45%;
+        right: 30%;
+        width: 40%;
+    }
+    .form input{
+        margin-bottom: 1.3em;
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 670px){
+    .heading{
+        font-size: 30px;
+    }
+    .grid12{
+        right: 20%;
+        width: 60%;
+        height: 55%;
+    }
+    .form{
+        right: 25%;
+        width: 50%;
+    }
+    .form input{
+        font-size: 17px;
+    }
+}
+@media only screen and (max-width: 600px){
+    .heading{
+        font-size: 26px;
+        letter-spacing: .8px;
+        font-weight: 800;
+    }
+    .grid12{
+        right: 16%;
+        width: 68%;
+        height: 54%;
+    }
+    .form{
+        right: 25%;
+        width: 50%;
+    }
+    .form input{
+        font-size: 16px;
+    }
+}
+@media only screen and (max-width: 512px){
+    .heading{
+        font-size: 24px;
+        letter-spacing: .47px;
+    }
+    .grid12{
+        right: 14%;
+        width: 72%;
+        height: 54%;
+    }
+    .form{
+        right: 23%;
+        width: 54%;
+    }
+    .form input{
+        font-size: 16px;
+    }
+}
+@media only screen and (max-width: 420px){
+    .heading{
+        font-size: 24px;
+        letter-spacing: .47px;
+    }
+    .grid12{
+        right: 10%;
+        width: 80%;
+        height: 54%;
+    }
+    .form{
+        right: 15%;
+        width: 70%;
+    }
+    .form input{
+        font-size: 16px;
+    }
 }
