--- a/assets/StyleSheets/main.css
+++ b/assets/StyleSheets/main.css
@@ -149,6 +149,7 @@ input[type="submit"] {
 @media only screen and (max-width: 880px) {
     .background {
         height: 680px;
+        background-size: cover !important;
     }
 
     .grid1 {
